.disabled/postgresql-operator/overlays/postgres-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-operator
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: postgres-operator
          securityContext:
            $patch: delete
